fixed text wrapping

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -300,7 +300,7 @@
   header nav ul li {
     padding: 0rem;
   }
-  header nav ul li a[href="index.html"] {
+  header nav ul li .margin {
     margin-top: 2rem;
   }
   header nav ul.ExpandNav {
@@ -445,6 +445,9 @@
   .Features .details {
     grid-template-columns: 1fr;
     gap: 2rem;
+  }
+  .Features .mobiletextwrap {
+    display: block;
   }
   .borderbottom h2 {
     font-size: 1.8rem;
